--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.779.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.4.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.4",
+    "multer": "^1.4.2",
+    "sharp": "^0.26.2",
     "socket.io": "^2.3.0"
   },
   "devDependencies": {
